--- a/src/templates/src/base.html
+++ b/src/templates/src/base.html
@@ -69,19 +69,12 @@
               <a class="nav-link primary_text" href="/golf-classic-2017-05-13">Golf Classic 2017</a>
             </li>
 
-            {% if infoActive%} <li class="nav-item dropdown active" style="margin: auto;">
-            {% else %} <li class="nav-item dropdown" style="margin: auto;">
-            {%endif %}
-              <a class="nav-link dropdown-toggle primary_text" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Events
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="/about">About</a>
-                <a class="dropdown-item" href="/routes">Routes</a>
-                <a class="dropdown-item" href="/FAQ">FAQs</a>
-                <a class="dropdown-item" href="/exec">Exec Board</a>
-              </div>
+            {% if scheduleActive%} <li class="nav-item active" style="margin: auto;"> 
+            {% else %} <li class="nav-item" style="margin: auto;">
+            {% endif %}
+              <a class="nav-link primary_text" href="/golf-classic-2017-05-13/involvement">Get Involved</a>
             </li>
+            
           </ul>
           <!-- <ul class="navbar-nav ml-auto nav-flex-icons">
             
