--- a/src/templates/src/golf_involvement_base.html
+++ b/src/templates/src/golf_involvement_base.html
@@ -57,7 +57,8 @@
     </style>
     <!-- <script src="/static/scripts/client.js" defer></script> -->
     <div class="container">
-
+        {% block content%}
+        {% endblock content%}
         <br>
         <h3>Golf Registration</h3>
         <div class="card">
