--- a/custAdmin/templates/custAdmin/home_form.html
+++ b/custAdmin/templates/custAdmin/home_form.html
@@ -200,7 +200,17 @@
             document.getElementById('two_picture_div_' + num).remove()
         }
     </script>
+        <style 
+        type="text/css">.image_label {
+            background: rgba(0, 0, 0, 0);
+            border: none;
+        }   
 
+        .indent_div_content {
+            padding-left: 1rem !important;
+        }
+
+    </style>
     <div class="container">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token%}
@@ -208,30 +218,35 @@
 
                 <h2>Home Screen Text</h2>
                 <h5>Left side text:</h5>
-                <label id="left_text_title_label">Title: </label>
-                <input type="text" name="left_text_title" id="left_text_title" value="{{left.title}}"><br>
-                <label id="left_text_text_label">Value: </label><br>
-                <textarea type="text" name="left_text_text" id="left_text_text" rows="6" cols="50"> {{left.text}} </textarea><br>
+                <div class="indent_div_content">
+                    <label id="left_text_title_label">Title: </label>
+                    <input type="text" name="left_text_title" id="left_text_title" value="{{left.title}}"><br>
+                    <label id="left_text_text_label">Value: </label><br>
+                    <textarea type="text" name="left_text_text" id="left_text_text" rows="6" cols="50"> {{left.text}} </textarea><br>    
+                </div>
                 
                 <h5>Right side text:</h5>
-                <label id="right_text_title_label">Title: </label>
-                <input type="text" name="right_text_title" id="right_text_title" value="{{right.title}}"><br>
-                <label id="right_text_text_label">Value: </label><br>
-                <textarea type="text" name="right_text_text" id="right_text_text" rows="6" cols="50"> {{right.text}} </textarea><br>
+                <div class="indent_div_content">
+                    <label id="right_text_title_label">Title: </label>
+                    <input type="text" name="right_text_title" id="right_text_title" value="{{right.title}}"><br>
+                    <label id="right_text_text_label">Value: </label><br>
+                    <textarea type="text" name="right_text_text" id="right_text_text" rows="6" cols="50"> {{right.text}} </textarea><br>
+                </div>
 
                 <h5>Tax Deduction text:</h5>
-                <label id="tax_text_title_label">Title: </label>
-                <input type="text" name="tax_text_title" id="tax_text_title" value="{{irs.title}}"><br>
-                <label id="tax_text_text_label">Value: </label><br>
-                <textarea type="text" name="tax_text_text" id="tax_text_text" rows="6" cols="50"> {{irs.text}} </textarea><br>
-                
+                <div class="indent_div_content">
+                    <label id="tax_text_title_label">Title: </label>
+                    <input type="text" name="tax_text_title" id="tax_text_title" value="{{irs.title}}"><br>
+                    <label id="tax_text_text_label">Value: </label><br>
+                    <textarea type="text" name="tax_text_text" id="tax_text_text" rows="6" cols="50"> {{irs.text}} </textarea><br>
+                </div>
                 <hr><br>
                 <h2>Rotating Panel Content</h2>
                 {% for b in blocks %}
                     {% if b.key == "count_vals" %}
                         <h5>Donation Counter</h5>
                         <label for="cars">Events on donation counter:</label><br>
-                        <div id='donation_div'>  
+                        <div id='donation_div' class="indent_div_content">  
                             {% for d in b.vals %}
                                 <label id="donation_text_label_{{d.count}}">Text: </label>
                                 <input type="text" name="donation_text_{{d.count}}" id="donation_text_{{d.count}}" value="{{d.text}}">
@@ -245,15 +260,16 @@
                     {% endif %}
                     {% if b.key == "golf_outing" %}
                         <h5>Current Golf Outing</h5>
-                        <div id='golf_div'>  
+                        <div id='golf_div' class="indent_div_content">  
                             <label id="golf_event_text_label">Title: </label>
                             <input type="text" name="golf_event_text" id="golf_event_text" value="{{b.title}}"><br>
                             <label for="golf_event_full_date">Outing Date:  </label>
                             <input type="date" name="golf_event_full_date" id="golf_event_full_date" value="{{b.date}}"><br>
                             <label id="golf_event_description_label">Description: </label><br>
                             <textarea type="text" name="golf_event_description" id="golf_event_description" rows="6" cols="50"> {{b.descr}} </textarea><br>
-                            <input type="file" id="golf_image" name="golf_image">
-                            <label>Currently uploaded file - <a href="/static/images/home/{{b.file_name}}" download="{{b.file_name}}">{{b.file_name}}</a></label>
+                            <input type="file" id="golf_event_image" name="golf_event_image">                            
+                            <input class="image_label" name="golf_event_image_current" id="golf_event_image_current" type="text" value="{{b.file_name}}" readonly><br>
+
                             <br>
                             <br id='br_line_{{d.count}}'>
                         </div>
@@ -262,7 +278,7 @@
 
                 <div id='two_picture_div_big'>  
                     {% for b in two_pics %}
-                        <div id='two_picture_div_{{b.count}}'>  
+                        <div id='two_picture_div_{{b.count}}' class="indent_div_content">  
                             <h5 style="display: inline;">Two Picture Frame - {{b.count}}</h5> 
                             <input type="button" onClick="remove_two_picture_frame(parseInt('{{b.count}}'))" value="X">
                             <br>
@@ -272,10 +288,12 @@
                             <textarea type="text" name="two_pic_frame_description_{{b.count}}" id="two_pic_frame_description_{{b.count}}" rows="6" cols="50"> {{b.descr}} </textarea><br>
                             <label id="two_pic_frame_image_left_label_{{b.count}}">Image-left: </label>
                             <input type="file" id="two_pic_frame_image_left_{{b.count}}" name="two_pic_frame_image_left_{{b.count}}">
-                            <label id="two_pic_frame_image_left_current_{{b.count}}">Currently uploaded file - <a href="/static/images/home/{{b.golf_image_left}}" download="{{b.golf_image_left}}">{{b.golf_image_left}}</a></label><br>
+                            <input class="image_label" name="two_pic_frame_image_left_current_{{b.count}}" id="two_pic_frame_image_left_current_{{b.count}}" type="text" value="{{b.golf_image_left}}" readonly><br>
+
                             <label id="two_pic_frame_image_right_label_{{b.count}}">Image-right: </label>
                             <input type="file" id="two_pic_frame_image_right_{{b.count}}" name="two_pic_frame_image_right_{{b.count}}">
-                            <label id="two_pic_frame_image_right_current_{{b.count}}">Currently uploaded file - <a href="/static/images/home/{{b.golf_image_right}}" download="{{b.golf_image_right}}">{{b.golf_image_right}}</a></label>
+                            <input class="image_label" name="two_pic_frame_image_right_current_{{b.count}}" id="two_pic_frame_image_right_current_{{b.count}}" type="text" value="{{b.golf_image_right}}" readonly><br>
+
                             <br>
                             <br id='br_line_{{d.count}}'>
                         </div>
