--- a/src/templates/src/base.html
+++ b/src/templates/src/base.html
@@ -54,7 +54,7 @@
             {% if newsActive%} <li class="nav-item active" style="margin: auto;">
             {% else %} <li class="nav-item" style="margin: auto;">
             {% endif %}
-              <a class="nav-link primary_text" href="/our-team">Our Team</a>
+              <a class="nav-link primary_text" href="/our-team">About Us</a>
             </li>
 
             <li class="nav-item">
