--- a/src/templates/src/base.html
+++ b/src/templates/src/base.html
@@ -66,7 +66,7 @@
             {% if scheduleActive%} <li class="nav-item active" style="margin: auto;"> 
             {% else %} <li class="nav-item" style="margin: auto;">
             {% endif %}
-              <a class="nav-link primary_text" href="/golf-classic-2017-05-13">Golf Classic 2017</a>
+              <a class="nav-link primary_text" href="/golf-classic">Golf Classic</a>
             </li>
 
             {% if scheduleActive%} <li class="nav-item active" style="margin: auto;"> 
