--- a/src/templates/src/base.html
+++ b/src/templates/src/base.html
@@ -72,7 +72,7 @@
             {% if scheduleActive%} <li class="nav-item active" style="margin: auto;"> 
             {% else %} <li class="nav-item" style="margin: auto;">
             {% endif %}
-              <a class="nav-link primary_text" href="/golf-classic-2017-05-13/involvement">Get Involved</a>
+              <a class="nav-link primary_text" href="/involvement">Get Involved</a>
             </li>
             
           </ul>
