--- a/src/templates/src/golf_classic_involvement.html
+++ b/src/templates/src/golf_classic_involvement.html
@@ -89,120 +89,122 @@
                 </div>
             </div>
         </div>
-        <hr>
-        <h3>Golf Registration</h3>
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-6">
-                        <h5>Single Golfer Registration - ${{golf_options.1s.price_display}}</h5>
-                        <ul>
-                            {% for d in golf_options.1s.description %}
-                                <li> {{d}}</li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    <div class="col-6">
-                        
-                        <div id="single_div" style="display:none">
-                            <form id="payment-form" action="/create-checkout-session-view?type={{golf_options.1s.stripe_price_variable}}&date_code={{date_code}}" method="POST">
-                                {% csrf_token%}
-                                <ul class="in_form">
-                                    <li class="form-row">
-                                        <label>Contact Email:</label>
-                                        <input type="text" name="email" id="email" value="{{data.course}}"><br>
-                                    </li>
-                                    <li class="form-row">
-                                        <label>Golfer First Name:</label>
-                                        <input type="text" name="fname_1" id="fname_1" value="{{data.course}}"><br>
-                                    </li>
-                                    <li class="form-row">
-                                        <label>Golfer Last Name:</label>
-                                        <input type="text" name="lname_1" id="lname_1" value="{{data.course}}"><br>
-                                    </li>
-                                </ul>
-                                <button class="registration_btn yellow_background" type="submit">Proceed to Secure Checkout</button>
-                                <button class="registration_btn yellow_background" onclick="open_form('single_div_btn','single_div')" type="button">X</button>
-                            </form>
-                        </div>
-                        <div id="single_div_btn"  style="height: 100%;">
-                            <div class="d-flex align-items-center justify-content-center" style="height: 100%;">
-                                <button class="registration_btn yellow_background large_btn" onclick="open_form('single_div', 'single_div_btn')">Register</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-6">
-                        <h5>Foursome Golfer Registration - ${{golf_options.4s.price_display}}</h5>
-                        <ul>
-                            {% for d in golf_options.4s.description %}
-                                <li> {{d}}</li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    <div class="col-6">
-                        <div id="foursome_div" style="display:none" class="row">
-                            <form id="payment-form" action="/create-checkout-session-view?type={{golf_options.4s.stripe_price_variable}}&date_code={{date_code}}" method="POST">
-                                {% csrf_token%}
-                                <ul class="in_form">
-                                    <li class="form-row">
-                                        <label>Contact Email:</label>
-                                        <input type="text" name="email" id="email" value="{{data.course}}"><br>
-                                    </li>
-                                    <li class="form-row">
-                                        <label>Main Golfer First Name:</label>
-                                        <input type="text" name="fname_1" id="fname_1" value="{{data.course}}"><br>
-                                    </li>
-                                    <li class="form-row">
-                                        <label>Main Golfer Last Name:</label>
-                                        <input type="text" name="lname_1" id="lname_1" value="{{data.course}}"><br>
-                                    </li>
-                                </ul>
-                                <button class="registration_btn yellow_background" type="submit">Proceed to Secure Checkout</button>
-                                <button class="registration_btn yellow_background" onclick="open_form('foursome_div_btn','foursome_div')" type="button">X</button>
-                            </form>
-                        </div>
-                        <div id="foursome_div_btn" style="height: 100%;">
-                            <div class="d-flex align-items-center justify-content-center" style="height: 100%;">
-                                <button class="registration_btn yellow_background large_btn" onclick="open_form('foursome_div', 'foursome_div_btn')">Register</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <h4>Sponsorship Opportunites</h4>
-        {% for s in sponsor_options %}
+        {% if active %}
+            <hr>
+            <h3>Golf Registration</h3>
             <div class="card">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-6">
-                            <h5>{{s.sponsor_option_title}} - ${{s.stripe_price_variable}}</h5>
+                            <h5>Single Golfer Registration - ${{golf_options.1s.price_display}}</h5>
                             <ul>
-                                {% for d in s.description %}
+                                {% for d in golf_options.1s.description %}
                                     <li> {{d}}</li>
                                 {% endfor %}
                             </ul>
                         </div>
                         <div class="col-6">
-                            <div class="d-flex align-items-center justify-content-center" style="height: 100%;">
-                                <form action="mailto:{{contact_email}}?subject={{s.sponsor_option_title}}!" method="GET">
-                                    <button type="submit" class="registration_btn yellow_background large_btn"> Email to Get Involved</button>
+                            
+                            <div id="single_div" style="display:none">
+                                <form id="payment-form" action="/create-checkout-session-view?type={{golf_options.1s.stripe_price_variable}}&date_code={{date_code}}" method="POST">
+                                    {% csrf_token%}
+                                    <ul class="in_form">
+                                        <li class="form-row">
+                                            <label>Contact Email:</label>
+                                            <input type="text" name="email" id="email" value="{{data.course}}"><br>
+                                        </li>
+                                        <li class="form-row">
+                                            <label>Golfer First Name:</label>
+                                            <input type="text" name="fname_1" id="fname_1" value="{{data.course}}"><br>
+                                        </li>
+                                        <li class="form-row">
+                                            <label>Golfer Last Name:</label>
+                                            <input type="text" name="lname_1" id="lname_1" value="{{data.course}}"><br>
+                                        </li>
+                                    </ul>
+                                    <button class="registration_btn yellow_background" type="submit">Proceed to Secure Checkout</button>
+                                    <button class="registration_btn yellow_background" onclick="open_form('single_div_btn','single_div')" type="button">X</button>
                                 </form>
+                            </div>
+                            <div id="single_div_btn"  style="height: 100%;">
+                                <div class="d-flex align-items-center justify-content-center" style="height: 100%;">
+                                    <button class="registration_btn yellow_background large_btn" onclick="open_form('single_div', 'single_div_btn')">Register</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <br>
-        {% endfor %}
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-6">
+                            <h5>Foursome Golfer Registration - ${{golf_options.4s.price_display}}</h5>
+                            <ul>
+                                {% for d in golf_options.4s.description %}
+                                    <li> {{d}}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <div class="col-6">
+                            <div id="foursome_div" style="display:none" class="row">
+                                <form id="payment-form" action="/create-checkout-session-view?type={{golf_options.4s.stripe_price_variable}}&date_code={{date_code}}" method="POST">
+                                    {% csrf_token%}
+                                    <ul class="in_form">
+                                        <li class="form-row">
+                                            <label>Contact Email:</label>
+                                            <input type="text" name="email" id="email" value="{{data.course}}"><br>
+                                        </li>
+                                        <li class="form-row">
+                                            <label>Main Golfer First Name:</label>
+                                            <input type="text" name="fname_1" id="fname_1" value="{{data.course}}"><br>
+                                        </li>
+                                        <li class="form-row">
+                                            <label>Main Golfer Last Name:</label>
+                                            <input type="text" name="lname_1" id="lname_1" value="{{data.course}}"><br>
+                                        </li>
+                                    </ul>
+                                    <button class="registration_btn yellow_background" type="submit">Proceed to Secure Checkout</button>
+                                    <button class="registration_btn yellow_background" onclick="open_form('foursome_div_btn','foursome_div')" type="button">X</button>
+                                </form>
+                            </div>
+                            <div id="foursome_div_btn" style="height: 100%;">
+                                <div class="d-flex align-items-center justify-content-center" style="height: 100%;">
+                                    <button class="registration_btn yellow_background large_btn" onclick="open_form('foursome_div', 'foursome_div_btn')">Register</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <h4>Sponsorship Opportunites</h4>
+            {% for s in sponsor_options %}
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-6">
+                                <h5>{{s.sponsor_option_title}} - ${{s.stripe_price_variable}}</h5>
+                                <ul>
+                                    {% for d in s.description %}
+                                        <li> {{d}}</li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div class="col-6">
+                                <div class="d-flex align-items-center justify-content-center" style="height: 100%;">
+                                    <form action="mailto:{{contact_email}}?subject={{s.sponsor_option_title}}!" method="GET">
+                                        <button type="submit" class="registration_btn yellow_background large_btn"> Email to Get Involved</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+            {% endfor %}
+        {% endif %}
     </div>
 
 {% endblock %}
