--- a/src/templates/src/golf_classic_sponsorship.html
+++ b/src/templates/src/golf_classic_sponsorship.html
@@ -55,6 +55,7 @@
             padding-left: .25rem;
         }
     </style>
+    <!-- <script src="/static/scripts/client.js" defer></script> -->
     <div class="container">
 
         <br>
@@ -177,6 +178,32 @@
                     </div>
                 </div>
             </div>
+            <hr>
+            <h4>Sponsorship Opportunites</h4>
+            {% for s in sponsor_options %}
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-6">
+                                <h5>{{s.sponsor_option_title}} - ${{s.stripe_price_variable}}</h5>
+                                <ul>
+                                    {% for d in s.description %}
+                                        <li> {{d}}</li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div class="col-6">
+                                <div class="d-flex align-items-center justify-content-center" style="height: 100%;">
+                                    <form action="mailto:{{contact_email}}?subject={{s.sponsor_option_title}}!" method="GET">
+                                        <button type="submit" class="registration_btn yellow_background large_btn"> Email to Get Involved</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+            {% endfor %}
         {% endif %}
     </div>
 
